--- a/app/src/main/res/layout/fragment_add_incident.xml
+++ b/app/src/main/res/layout/fragment_add_incident.xml
@@ -69,7 +69,7 @@
                     android:layout_centerHorizontal="true"
                     android:maxLines="1"
                     android:text="@string/marcar_local"
-                    android:textColor="@color/title_color"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/slide_title"
                      />
 
