--- a/app/src/main/res/layout/fragment_incident_maps.xml
+++ b/app/src/main/res/layout/fragment_incident_maps.xml
@@ -78,7 +78,7 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="@dimen/view_height"
         android:clipToPadding="true"
-        android:background="#73ffffff"
+        android:background="#ffffff"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
         <RelativeLayout
@@ -107,7 +107,7 @@ android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:textStyle="bold"
                         android:textSize="@dimen/slide_title"
-                        android:text="09 hours ago"
+                        android:text=""
                         android:textColor="@color/green"
                         />
                     <ImageView
