--- a/app/src/main/res/layout/incident_pop_up.xml
+++ b/app/src/main/res/layout/incident_pop_up.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/llSortChangePopup"
-    android:layout_width="300dp"
+    android:layout_width="330dp"
     android:paddingBottom="10dp"
     android:background="@drawable/card_pop_up"
     android:layout_height="wrap_content"
@@ -14,14 +14,14 @@
             android:paddingTop="20dp"
             android:paddingBottom="40dp"
             android:orientation="vertical"
-            android:layout_width="300dp"
+            android:layout_width="330dp"
             android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:text="@string/acidente"
+            android:text="@string/accident"
             android:textColor="@color/dark_yellow"
             android:textSize="@dimen/slide_desc" />
             <ImageView
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
-                android:text="@string/acidente"
+                android:text="@string/necessary_intervention"
                 android:textColor="@color/dark_yellow"
                 android:textSize="@dimen/slide_desc" />
 
