--- a/app/src/main/res/layout/incident_pop_up.xml
+++ b/app/src/main/res/layout/incident_pop_up.xml
@@ -17,7 +17,9 @@
             android:layout_width="330dp"
             android:layout_height="wrap_content">
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tvAccident"
+
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
@@ -30,7 +32,8 @@
                 android:layout_height="1dp"
                 />
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/tvNecessaryIntervention"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
@@ -47,7 +50,8 @@
 
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tvAllIncident"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
