--- a/app/src/main/res/layout/alert_pop_up.xml
+++ b/app/src/main/res/layout/alert_pop_up.xml
@@ -32,6 +32,7 @@
             android:textSize="@dimen/slide_desc"
             android:padding="20dp"
             android:gravity="center"
+            android:id="@+id/tvMsg"
             android:textStyle="bold"
             android:layout_marginTop="@dimen/alert_margin_top"
             android:textColor="@color/title_color"
