--- a/app/src/main/res/layout/fragment_incident_description.xml
+++ b/app/src/main/res/layout/fragment_incident_description.xml
@@ -69,7 +69,7 @@
                     android:layout_centerHorizontal="true"
                     android:maxLines="1"
                     android:text="@string/marcar_local"
-                    android:textColor="#222"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/slide_title"
                     />
 
