--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -39,5 +39,6 @@
     <dimen name="button_margin">35dp</dimen>
     <dimen name="profile_image_size">250dp</dimen>
     <dimen name="abuse_dialog_size">350dp</dimen>
-
+    <dimen name="success_size">30sp</dimen>
+    <dimen name="success_msg_top">140dp</dimen>
 </resources>
