--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,7 +40,7 @@
             android:id="@+id/ivProfile"
             android:layout_width="@dimen/profile_image_size"
             android:layout_height="@dimen/profile_image_size"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/profile_image"
             app:civ_border_width="0dp"
             android:layout_marginTop="100dp"
             android:layout_centerHorizontal="true"
