--- a/app/src/main/res/layout/incident_description.xml
+++ b/app/src/main/res/layout/incident_description.xml
@@ -10,31 +10,140 @@
     tools:showIn="@layout/fragment_incident_description">
 
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/tvDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:text=""
-        android:textSize="@dimen/slide_title"
-        android:includeFontPadding="true"
-        android:paddingBottom="20dp"
+    <LinearLayout
+        android:weightSum="3"
+        android:orientation="horizontal"
         android:paddingLeft="10dp"
-        android:textColor="@color/dark_yellow" />
+        android:paddingRight="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_marginTop="10dp"
-        android:id="@+id/tvAddress"
+        <LinearLayout
+            android:layout_weight="2"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentLeft="true"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/clock"
+                android:layout_marginTop="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tvDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginLeft="10dp"
+                android:text=""
+                android:textSize="@dimen/slide_title"
+                android:includeFontPadding="true"
+
+                android:textColor="@color/dark_yellow" />
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:visibility="gone"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_alignParentRight="true"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:id="@+id/tvViewInMap"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/share"
+                android:textSize="@dimen/bottom_tab_text"
+                android:textColor="@color/dark_blue" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:weightSum="3"
+        android:orientation="horizontal"
+      
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:text=""
-        android:textSize="@dimen/slide_title"
-        android:includeFontPadding="true"
-        android:paddingBottom="20dp"
-        android:paddingLeft="10dp"
-        android:textColor="@color/dark_yellow" />
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+
+            android:layout_weight="2"
+            android:layout_alignParentLeft="true"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_marginTop="10dp"
+                android:id="@+id/tvAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginRight="5dp"
+                android:text=""
+                android:textSize="@dimen/slide_title"
+                android:includeFontPadding="true"
+                android:textColor="@color/title_color" />
+
+
+
+        </LinearLayout>
+        
+        <View
+
+            android:layout_gravity="center_vertical"
+            android:background="@color/grey"
+            android:layout_width="1dp"
+            android:layout_height="80dp"/>
+        <LinearLayout
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:orientation="vertical"
+            android:layout_alignParentRight="true"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/view_map_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/view_in_map"
+                android:textSize="@dimen/bottom_tab_text"
+                android:textColor="@color/dark_blue" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+    <View
+        android:layout_marginTop="10dp"
+        android:background="@color/grey"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
     <ScrollView
         android:scrollbars="none"
         android:fillViewport="true"
