--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,10 +41,11 @@
             android:layout_width="@dimen/profile_image_size"
             android:layout_height="@dimen/profile_image_size"
             android:src="@drawable/profile_image"
-            app:civ_border_width="0dp"
+            app:civ_border_width="2dp"
+
             android:layout_marginTop="100dp"
             android:layout_centerHorizontal="true"
-            app:civ_border_color="#404040"/>
+            app:civ_border_color="@color/dark_yellow"/>
 
 
 
