--- a/app/src/main/res/layout/fragment_linked_accounts.xml
+++ b/app/src/main/res/layout/fragment_linked_accounts.xml
@@ -46,10 +46,10 @@
         android:layout_width="@dimen/profile_image_size"
         android:layout_height="@dimen/profile_image_size"
         android:src="@mipmap/ic_launcher"
-        app:civ_border_width="0dp"
+        app:civ_border_width="2dp"
         android:layout_marginTop="100dp"
         android:layout_centerHorizontal="true"
-        app:civ_border_color="#404040"/>
+        app:civ_border_color="@color/dark_yellow"/>
 
 
 
