--- a/app/src/main/res/layout/fragment_add_incident.xml
+++ b/app/src/main/res/layout/fragment_add_incident.xml
@@ -9,15 +9,24 @@
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
         android:fitsSystemWindows="true">
 
-
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleTextAppearance="@android:color/transparent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/vp_adds"
+                android:visibility="visible"
                 android:fitsSystemWindows="true"
                 android:background="@drawable/shaded_back"
                 android:layout_width="match_parent"
@@ -41,7 +50,8 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-
+                android:layout_gravity="top"
+                android:gravity="top"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp">
 
@@ -71,11 +81,12 @@
                     android:layout_alignParentRight="true"
                     android:src="@drawable/menu" />
             </RelativeLayout>
+        </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
     <ImageView
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/ivAddImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -91,22 +102,33 @@
         android:layout_height="match_parent">
     <LinearLayout
         android:visibility="visible"
+        android:padding="@dimen/activity_horizontal_margin"
         android:orientation="horizontal"
-        android:id="@+id/idllNewImages"
+        android:id="@+id/llNewImages"
         android:layout_width="match_parent"
         android:layout_height="@dimen/add_image_layout_size">
 
-        <FrameLayout
+        <RelativeLayout
             android:id="@+id/widget_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <com.makeramen.roundedimageview.RoundedImageView
+            <android.support.v7.widget.RecyclerView
+                android:layout_below="@id/llBack"
+                android:id="@+id/rvAddImages"
+                android:scrollbars="none"
+                android:layout_centerVertical="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+           <!-- <com.makeramen.roundedimageview.RoundedImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/image_guideline"
                 android:layout_width="@dimen/add_image_width"
                 android:layout_height="@dimen/add_image_height"
-                android:src="@drawable/login_back"
+                android:layout_toRightOf="@id/rvAddImages"
+                android:src="@drawable/add_more"
                 app:riv_mutate_background="true"
                 android:layout_centerInParent="true"
                 android:scaleType="centerCrop"
@@ -115,9 +137,9 @@
                 app:riv_border_color="#404040"
                 app:riv_oval="false"
 
-                />
+                />-->
 
-            <ImageView
+           <!-- <ImageView
                 android:id="@+id/widget_title_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -125,9 +147,9 @@
                 android:adjustViewBounds="true"
                 android:paddingTop="-10dp"
                 android:scaleType="fitStart"
-                android:src="@drawable/remove_img_icon" />
+                android:src="@drawable/remove_img_icon" />-->
 
-        </FrameLayout>
+        </RelativeLayout>
 
     </LinearLayout>
     <include  layout="@layout/add_incident_fields" />
