--- a/app/src/main/res/layout/add_incident_fields.xml
+++ b/app/src/main/res/layout/add_incident_fields.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:scrollbars="none"
+    android:fillViewport="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,8 +14,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_horizontal_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/fragment_add_incident">
+
+    <EditText
+        android:layout_marginTop="20dp"
+        android:editable="false"
+        android:enabled="false"
+        android:id="@+id/etAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:includeFontPadding="true"
+        android:paddingBottom="20dp"
+        android:paddingLeft="10dp"
+        android:textColorHint="@color/title_color"
+        android:textColor="@color/title_color" />
 
     <EditText
         android:layout_marginTop="20dp"
@@ -23,7 +44,7 @@
         android:hint="@string/description"
         android:textColor="@color/title_color" />
     <Spinner
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:includeFontPadding="true"
         android:id="@+id/spninnerCityHall"
         android:paddingBottom="20dp"
@@ -57,3 +78,4 @@
 
 
 </LinearLayout>
+</ScrollView>
