--- a/app/src/main/res/layout/crud_pop_up.xml
+++ b/app/src/main/res/layout/crud_pop_up.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/llSortChangePopup"
-    android:layout_width="150dp"
+    android:layout_width="230dp"
     android:paddingBottom="10dp"
     android:background="@drawable/card_pop_up"
     android:layout_height="wrap_content"
@@ -13,7 +13,7 @@
             android:paddingLeft="20dp"
 
             android:orientation="vertical"
-            android:layout_width="170dp"
+            android:layout_width="230dp"
             android:layout_height="wrap_content">
 
         <TextView
@@ -37,6 +37,22 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:text="@string/delete"
+                android:textColor="@color/dark_yellow"
+                android:textSize="@dimen/slide_desc" />
+
+
+            <ImageView
+                android:background="@color/grey"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                />
+            <TextView
+                android:id="@+id/tvMarkResolved"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:text="@string/incident_resolved"
                 android:textColor="@color/dark_yellow"
                 android:textSize="@dimen/slide_desc" />
 
