--- a/app/src/main/res/layout/fragment_add_incident.xml
+++ b/app/src/main/res/layout/fragment_add_incident.xml
@@ -1,169 +1,142 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_content"
-    android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:visibility="visible"
+    <RelativeLayout
+        android:id="@+id/rlView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
-        android:fitsSystemWindows="true">
+        >
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_adds"
+            android:visibility="visible"
             android:fitsSystemWindows="true"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleTextAppearance="@android:color/transparent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:background="@drawable/shaded_back"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/detail_backdrop_height"
+            android:layout_gravity="center_horizontal"
+            app:layout_collapseMode="parallax">
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/vp_adds"
-                android:visibility="visible"
-                android:fitsSystemWindows="true"
-                android:background="@drawable/shaded_back"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/detail_backdrop_height"
-                android:layout_gravity="center_horizontal"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                app:layout_collapseMode="parallax">
+        </android.support.v4.view.ViewPager>
 
-            </android.support.v4.view.ViewPager>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            app:tabGravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            app:tabBackground="@drawable/tab_selector"
+            app:tabIndicatorHeight="0dp"
+            />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="wrap_content"
+            >
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/ivback"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
-                app:tabGravity="center"
-                android:layout_gravity="bottom"
-                app:tabBackground="@drawable/tab_selector"
-                app:tabIndicatorHeight="0dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/back" />
+
+            <TextView
+                android:id="@+id/tvFeedTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:maxLines="1"
+                android:text="@string/marcar_local"
+                android:textColor="@color/white"
+                android:textSize="@dimen/slide_title"
                 />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_gravity="top"
-                android:gravity="top"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp">
+            <ImageView
+                android:visibility="gone"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/menu" />
+        </RelativeLayout>
 
-                <ImageView
-                    android:id="@+id/ivback"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/back" />
+    </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/tvFeedTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:maxLines="1"
-                    android:text="@string/marcar_local"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/slide_title"
-                     />
-
-                <ImageView
-                    android:visibility="gone"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_alignParentRight="true"
-                    android:src="@drawable/menu" />
-            </RelativeLayout>
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-    </android.support.design.widget.AppBarLayout>
 
     <ImageView
-        android:visibility="visible"
         android:id="@+id/ivAddImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:src="@drawable/edi_pic_icon"
-        app:layout_anchor="@id/appbar"
-        app:layout_anchorGravity="bottom|center" />
+        android:layout_below="@+id/rlView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-60dp"
+        android:elevation="5dp"
+        android:padding="20dp"
+        android:src="@drawable/edi_pic_icon" />
 
-    <LinearLayout
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:orientation="vertical"
+    <RelativeLayout
+        android:id="@+id/profile_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
-        android:visibility="visible"
-        android:padding="@dimen/activity_horizontal_margin"
-        android:orientation="horizontal"
-        android:id="@+id/llNewImages"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/add_image_layout_size">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rlView"
+        android:elevation="4dp"
+        android:background="@color/white"
+        android:paddingBottom="24dp">
 
-        <RelativeLayout
-            android:id="@+id/widget_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_below="@id/llBack"
-                android:id="@+id/rvAddImages"
-                android:scrollbars="none"
-                android:layout_centerVertical="true"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:visibility="gone"
+                android:padding="@dimen/activity_horizontal_margin"
+                android:orientation="horizontal"
+                android:id="@+id/llNewImages"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="@dimen/add_image_layout_size">
 
-           <!-- <com.makeramen.roundedimageview.RoundedImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/image_guideline"
-                android:layout_width="@dimen/add_image_width"
-                android:layout_height="@dimen/add_image_height"
-                android:layout_toRightOf="@id/rvAddImages"
-                android:src="@drawable/add_more"
-                app:riv_mutate_background="true"
-                android:layout_centerInParent="true"
-                android:scaleType="centerCrop"
-                app:riv_corner_radius="10dip"
-                app:riv_border_width="2dip"
-                app:riv_border_color="#404040"
-                app:riv_oval="false"
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
 
-                />-->
+                    <android.support.v7.widget.RecyclerView
+                        android:layout_below="@id/llBack"
+                        android:id="@+id/rvAddImages"
+                        android:scrollbars="none"
+                        android:layout_centerVertical="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
 
-           <!-- <ImageView
-                android:id="@+id/widget_title_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|right"
-                android:adjustViewBounds="true"
-                android:paddingTop="-10dp"
-                android:scaleType="fitStart"
-                android:src="@drawable/remove_img_icon" />-->
 
-        </RelativeLayout>
+                </RelativeLayout>
 
-    </LinearLayout>
-    <include  layout="@layout/add_incident_fields" />
-    </LinearLayout>
-    <Button
-        android:id="@+id/btnDone"
-        style="@style/RoundedCornerMaterialButtonBlue"
-        android:layout_width="match_parent"
-        android:layout_margin="@dimen/button_margin"
-        android:layout_height="@dimen/button_height"
-        android:fitsSystemWindows="true"
-        android:layout_gravity="center_horizontal|bottom"
-        android:text="@string/save"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="@dimen/slide_desc" />
-</android.support.design.widget.CoordinatorLayout>
+            </LinearLayout>
+            <include  layout="@layout/add_incident_fields" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnDone"
+            style="@style/RoundedCornerMaterialButtonBlue"
+            android:layout_width="match_parent"
+            android:layout_margin="@dimen/button_margin"
+            android:layout_height="@dimen/button_height"
+            android:fitsSystemWindows="true"
+            android:text="@string/save"
+            android:layout_alignParentBottom="true"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="@dimen/slide_desc" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
