--- a/app/src/main/res/layout/fragment_incident_description.xml
+++ b/app/src/main/res/layout/fragment_incident_description.xml
@@ -1,100 +1,101 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_content"
-
-    android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+    <RelativeLayout
+        android:id="@+id/rlView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
-        android:fitsSystemWindows="true">
+        >
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_adds"
+            android:visibility="visible"
             android:fitsSystemWindows="true"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleTextAppearance="@android:color/transparent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:background="@drawable/shaded_back"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/detail_backdrop_height"
+            android:layout_gravity="center_horizontal"
+            app:layout_collapseMode="parallax">
 
+        </android.support.v4.view.ViewPager>
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/vp_adds"
-                android:fitsSystemWindows="true"
-                android:background="@drawable/shaded_back"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/detail_backdrop_height"
-                android:layout_gravity="center_horizontal"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                app:layout_collapseMode="parallax">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            app:tabGravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            app:tabBackground="@drawable/tab_selector"
+            app:tabIndicatorHeight="0dp"
+            />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="wrap_content"
+            >
 
-            </android.support.v4.view.ViewPager>
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/ivback"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
-                app:tabGravity="center"
-                android:layout_gravity="bottom"
-                app:tabBackground="@drawable/tab_selector"
-                app:tabIndicatorHeight="0dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/back" />
+
+            <TextView
+                android:id="@+id/tvFeedTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:maxLines="1"
+                android:text="@string/marcar_local"
+                android:textColor="@color/white"
+                android:textSize="@dimen/slide_title"
                 />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/ivMenu"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/menu" />
+        </RelativeLayout>
 
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp">
+    </RelativeLayout>
 
-                <ImageView
-                    android:id="@+id/ivback"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/back" />
-
-                <TextView
-                    android:id="@+id/tvFeedTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:maxLines="1"
-                    android:text="@string/marcar_local"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/slide_title"
-                    />
-
-                <ImageView
-                    android:id="@+id/ivMenu"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_alignParentRight="true"
-                    android:src="@drawable/menu" />
-            </RelativeLayout>
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-    </android.support.design.widget.AppBarLayout>
 
     <ImageView
-        android:visibility="gone"
         android:id="@+id/ivAddImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/rlView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-60dp"
+        android:visibility="gone"
+        android:elevation="5dp"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:src="@drawable/edi_pic_icon"
-        app:layout_anchor="@id/appbar"
-        app:layout_anchorGravity="bottom|center" />
+        android:src="@drawable/edi_pic_icon" />
 
-    <include layout="@layout/incident_description" />
+    <RelativeLayout
+        android:id="@+id/profile_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rlView"
+        android:elevation="4dp"
+        android:background="@color/white"
+        android:paddingBottom="24dp">
 
 
-</android.support.design.widget.CoordinatorLayout>
+        <include  layout="@layout/incident_description" />
+
+
+    </RelativeLayout>
+
+</RelativeLayout>
