--- a/app/src/main/res/layout/incident_horizontal_item.xml
+++ b/app/src/main/res/layout/incident_horizontal_item.xml
@@ -68,6 +68,11 @@
                 />
 
         </RelativeLayout>
+        <ImageView
+            android:id="@+id/ivIncidentType"
+            android:src="@drawable/incident_resolved"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
