--- a/app/src/main/res/layout/incident_item.xml
+++ b/app/src/main/res/layout/incident_item.xml
@@ -70,6 +70,11 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/right_arrow" />
         </RelativeLayout>
+        <ImageView
+            android:id="@+id/ivIncidentType"
+            android:src="@drawable/incident_resolved"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
