--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
-    android:background="@color/toolbar_color"
+    android:background="@color/white"
     android:titleTextColor="@color/black"
     app:subtitleTextColor="@color/black"
     app:theme="@style/CustomActionBar"
