--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <!-- Screens background color-->
     <color name="bg_slider_screen1">#f4b241</color>
-    <color name="bg_slider_screen2">#16bc7d</color>
+    <color name="bg_slider_screen2">#98BC16</color>
     <color name="bg_slider_screen3">#203d8c</color>
     <!-- dots inactive colors -->
     <color name="dot_inactive_screen1">#ffa000</color>
