--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -14,20 +14,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/ivBack"
+        <RelativeLayout
+            android:id="@+id/rlBack"
             android:layout_marginLeft="20dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
+            android:layout_width="50dp"
+            android:layout_height="50dp">
+            <ImageView
+                android:layout_centerInParent="true"
+                android:id="@+id/ivBack"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
         <TextView
             android:gravity="center"
             android:layout_gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:paddingRight="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
             android:text="@string/notifications"
