--- a/app/src/main/res/layout/incident_description.xml
+++ b/app/src/main/res/layout/incident_description.xml
@@ -141,6 +141,7 @@
 
     </LinearLayout>
     <View
+        android:visibility="gone"
         android:layout_marginTop="10dp"
         android:background="@color/grey"
         android:layout_width="match_parent"
