--- a/app/src/main/res/layout/add_incident_fields.xml
+++ b/app/src/main/res/layout/add_incident_fields.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:scrollbars="none"
     android:fillViewport="true"
+    android:paddingBottom="60dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
 
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -14,6 +15,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_horizontal_margin"
+
     tools:showIn="@layout/fragment_add_incident">
 
     <EditText
