--- a/app/src/main/res/layout/fragment_add_incident.xml
+++ b/app/src/main/res/layout/fragment_add_incident.xml
@@ -57,7 +57,7 @@
                 android:maxLines="1"
                 android:text="@string/marcar_local"
                 android:textColor="@color/white"
-                android:textSize="@dimen/slide_title"
+                android:textSize="@dimen/action_title"
                 />
 
             <ImageView
