--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="dots_margin_bottom">20dp</dimen>
     <dimen name="img_width_height">150dp</dimen>
     <dimen name="slide_title">18sp</dimen>
+    <dimen name="action_title">22sp</dimen>
     <dimen name="heading">22sp</dimen>
     <dimen name="slide_desc">18sp</dimen>
     <dimen name="desc_padding">20dp</dimen>
