--- a/app/src/main/res/layout/result_pop_up.xml
+++ b/app/src/main/res/layout/result_pop_up.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@android:color/transparent"
     >
 
     <RelativeLayout
@@ -21,9 +21,16 @@
     <RelativeLayout
         android:id="@+id/rlOrders"
         android:layout_centerInParent="true"
-        android:background="@drawable/dailog_border"
         android:layout_width="match_parent"
         android:layout_height="@dimen/alert_dialog_size_height">
+        <LinearLayout
+            android:background="@drawable/dailog_border"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="57dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <TextView
             android:id="@+id/tvMsg"
             android:layout_gravity="center_horizontal"
@@ -39,7 +46,9 @@
             android:layout_height="wrap_content" />
 
 
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,6 +68,18 @@
                 android:text="@string/ok" />
 
         </LinearLayout>
+
+        </RelativeLayout>
+
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/rsa_logo" />
     </RelativeLayout>
     </RelativeLayout>
+
 </RelativeLayout>
