--- a/app/src/main/res/layout/contact_us_pop_up.xml
+++ b/app/src/main/res/layout/contact_us_pop_up.xml
@@ -10,16 +10,15 @@
         android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     <ImageView
         android:src="@drawable/cross"
         android:id="@+id/ivCross"
+        android:visibility="gone"
         android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
     <RelativeLayout
         android:id="@+id/rlOrders"
         android:layout_centerInParent="true"
@@ -34,35 +33,47 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <TextView
+            android:id="@+id/tvTitle"
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true"
-            android:text="@string/delete_alert_text"
+            android:text="@string/please_share_your_thought"
             android:layout_width="wrap_content"
             android:textSize="@dimen/slide_desc"
             android:padding="20dp"
+            android:layout_marginTop="30dp"
             android:gravity="center"
-            android:id="@+id/tvMsg"
             android:textStyle="bold"
-            android:layout_marginTop="@dimen/alert_margin_top"
             android:textColor="@color/title_color"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:layout_centerInParent="true"
+            android:id="@+id/tvMsg"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerHorizontal="true"
+            android:text="@string/email"
+            android:layout_width="wrap_content"
+            android:textSize="@dimen/slide_desc"
+            android:padding="10dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/dark_blue"
+            android:layout_height="wrap_content" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <LinearLayout
-            android:gravity="bottom"
-            android:layout_gravity="bottom"
             android:layout_width="match_parent"
-            android:weightSum="2"
+            android:weightSum="1"
             android:layout_alignParentBottom="true"
             android:layout_height="wrap_content">
             <Button
-                android:id="@+id/btnCancel"
                 style="@style/RoundedCornerMaterialButtonBlueOneCorner"
+                android:id="@+id/btnOk"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="@dimen/button_height"
@@ -71,19 +82,9 @@
                 android:layout_alignParentBottom="true"
                 android:textSize="@dimen/slide_desc"
                 android:text="@string/cancel" />
-            <Button
-                android:id="@+id/btnDelete"
-                style="@style/RoundedCornerMaterialButtonYellowOneCorner"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="@dimen/button_height"
-                android:textColor="@color/white"
-                android:textAllCaps="false"
-                android:layout_alignParentBottom="true"
-                android:textSize="@dimen/slide_desc"
-                android:text="@string/delete" />
+
         </LinearLayout>
-            </RelativeLayout>
+        </RelativeLayout>
         </LinearLayout>
         <ImageView
             android:id="@+id/imageView1"
