--- a/app/src/main/res/layout/fragment_terms_and_services.xml
+++ b/app/src/main/res/layout/fragment_terms_and_services.xml
@@ -11,6 +11,7 @@
     <TextView
         android:layout_gravity="center_horizontal"
         android:id="@+id/tvTitle"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -41,17 +42,17 @@
         android:src="@drawable/rsa_title" />
     </LinearLayout>
 
+
     <TextView
         android:padding="20dp"
         android:id="@+id/tvData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:maxLines="1"
-        android:scrollbars="vertical"
         android:layout_marginTop="50dp"
         android:text=""
+        android:scrollbars="vertical"
         android:textColor="@color/title_color"
-        android:textSize="@dimen/action_title"
+        android:textSize="@dimen/slide_desc"
         />
 </LinearLayout>
