--- a/app/src/main/res/layout/login_pop_up.xml
+++ b/app/src/main/res/layout/login_pop_up.xml
@@ -97,6 +97,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:visibility="gone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
@@ -113,6 +114,7 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:gravity="center"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
