--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -89,9 +89,19 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/by_sign_up"
+                    android:visibility="gone"
                     android:textColor="@color/white"
                     android:textSize="@dimen/slide_title" />
-
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginRight="3dp"
+                    android:layout_marginBottom="50dp"
+                    android:text="@string/terms_of_service"
+                    android:id="@+id/tvTermsAndServices"
+                    android:textColor="@color/blue"
+                    android:textSize="@dimen/slide_title" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -100,15 +110,7 @@
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginRight="3dp"
-                        android:text="@string/terms_of_service"
-                        android:id="@+id/tvTermsAndServices"
-                        android:textColor="@color/blue"
-                        android:textSize="@dimen/slide_title" />
+
 
                     <TextView
                         android:layout_width="wrap_content"
