--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -120,6 +120,7 @@
                         android:layout_centerInParent="true"
                         android:textColor="@color/black"
                         android:text=""
+                        android:visibility="gone"
                         android:gravity="center"
                         android:textSize="10sp"
                         android:layout_marginTop="-10dp"
